additional changes for podCount from ROS team
Signed-off-by: Bhaktavatsal Reddy <bhamaram@in.ibm.com>